# zpars

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: docs.md
src/: codec.rs  error.rs  lib.rs  main.rs  zpaq.rs
tests/: cli.rs  compat.rs
