[package]
name = "zpars"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive", "env"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.23.0"
